DigiHub/force-app/main/default/objects/MANDigiHubCredentials__c/MANDigiHubCredentials__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>MANDigiHubCredentials</label>
</CustomObject>