DigiHub/force-app/main/default/objects/MANDigiHubCredentials__c/fields/API_res__c.field-meta.xml
<CustomField>
    <fullName>API_res__c</fullName>
    <label>API_res</label>
    <length>200</length>
    <type>Text</type>
</CustomField>