DigiHub/force-app/main/default/objects/MANDigiHubCredentials__c/fields/client_id__c.field-meta.xml
<CustomField>
    <fullName>client_id__c</fullName>
    <label>client_id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>