DigiHub/force-app/main/default/objects/MANDigiHubCredentials__c/fields/client_secret__c.field-meta.xml
<CustomField>
    <fullName>client_secret__c</fullName>
    <label>client_secret</label>
    <length>60</length>
    <type>Text</type>
</CustomField>