DigiHub/force-app/main/default/objects/MANDigiHubCredentials__c/fields/correlation_id__c.field-meta.xml
<CustomField>
    <fullName>correlation_id__c</fullName>
    <label>correlation_id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>